k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: raytracer

spec:
  replicas: 0

  selector:
    matchLabels:
      app: worker

  template:
    metadata:
      labels:
        app: worker

    spec:
      containers:
        - name: worker
          image: gonza2323/renderer-worker:latest
          imagePullPolicy: Always
