k8s/minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: raytracer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio

  template:
    metadata:
      labels:
        app: minio

    spec:
      containers:
        - name: minio
          image: minio/minio:latest

          args:
            - server
            - /data
            - --console-address
            - ":9001"

          ports:
            - name: api
              containerPort: 9000

            - name: console
              containerPort: 9001

          volumeMounts:
            - name: minio-storage
              mountPath: /data

      volumes:
        - name: minio-storage
          persistentVolumeClaim:
            claimName: minio-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: raytracer
spec:
  selector:
    app: minio

  ports:
    - name: api
      port: 9000
      targetPort: 9000

    - name: console
      port: 9001
      targetPort: 9001

  type: ClusterIP
