k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: raytracer
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "300m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - renders.gpadilla.com
      secretName: webapp-tls
  rules:
    - host: renders.gpadilla.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp
                port:
                  number: 8000
